Revert "Move some files to the assets folder"
This reverts commit 1da0de91bfbe02e559e959d89f00090fe0b01ec8.

--- a/index.qmd
+++ b/index.qmd
@@ -27,8 +27,8 @@ affiliations:
 
 date: 2026-01-14
 date-format: long
-bibliography: assets/references.bib
-csl: assets/nature.csl
+bibliography: references.bib
+csl: nature.csl
 ---
 
 ## Bicycling in the U.S.
@@ -53,13 +53,13 @@ csl: assets/nature.csl
 # {data-menu-title="The lidar-equipped research bicycle"}
 
 ::: {style="text-align:center;font-size:50px;"}
-![The lidar-equipped research bicycle](./assets/images/lidar-bike.png){fig-align="center" height="580"}
+![The lidar-equipped research bicycle](./images/lidar-bike.png){fig-align="center" height="580"}
 :::
 
 # {data-menu-title="Point cloud demo"}
 
 ::: {style="text-align:center;"}
-[![](./assets/images/point-cloud-demo.png){fig-align="center" height="580"}](https://fenggroup.org/pointcloud/examples/bike-2.html){preview-link="true"}
+[![](./images/point-cloud-demo.png){fig-align="center" height="580"}](https://fenggroup.org/pointcloud/examples/bike-2.html){preview-link="true"}
 :::
 
 ## Preliminary data collection
@@ -93,7 +93,7 @@ csl: assets/nature.csl
 # {data-menu-title="Algorithm flow chart" }
 
 ::: {style="font-size:50px;"}
-![The overtaking vehicle detection and tracking algorithm](./assets/images/flowchart.png){fig-align="center"}
+![The overtaking vehicle detection and tracking algorithm](./images/flowchart.png){fig-align="center"}
 :::
 
 
